# web-font-mdi

./: .gitignore  Setup.hs  cabal.project  flake.nix  meta.json  package.yaml  web-font-mdi.cabal
src/Web/Font/: MDI.hs
util/: TH.hs
