cabal-version:  3.0
name:           web-font-mdi
version:        0.1.0.0
description:    This package contains a simple but comprehensive enumeration of all <https://materialdesignicons.com/ Material Design Icons> icon constants.
category:       Web
homepage:       https://github.com/ners/web-font-mdi#readme
bug-reports:    https://github.com/ners/web-font-mdi/issues
maintainer:     ners <ners@gmx.ch>
license:        Apache-2.0
license-file:   LICENCE.md
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ners/web-font-mdi

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Web.Font.MDI
  build-depends: base
